--- a/index.html
+++ b/index.html
@@ -35,9 +35,10 @@
                 <!-- Image of myself -->
                     <div class="image_bio">
                         <img src="assets/images/mrybak.jpg" alt="Matt Rybak">
-                        <p>Hello I am Matt Rybak. I am originally from North Jersey. I went to college on the West Coast at the University of San Diego.
-                I majored in Finance and Economics. I currently work at BlackRock and have been working there for six years. I enjoy watching and playing sports. 
-                I enjoy watching hockey the most. I enjoy playing tennis or basketball the most. I currently do not have any pets but would like to get a dog in the future. 
+                        <p id="firstp"> Hello I am Matt Rybak. I am originally from North Jersey. </p>
+                        <p> I went to college on the West Coast at the University of San Diego. </p>
+                        <p> I majored in Finance and Economics. I currently work at BlackRock and have been working there for six years. I enjoy watching and playing sports. </p>
+                        <p> I enjoy watching hockey the most. I enjoy playing tennis or basketball the most. I currently do not have any pets but would like to get a dog in the future. 
                         </p>    
 
                     </div>
@@ -48,7 +49,7 @@
 
 <!-- Footer -->
     <footer>
-        <p class="Copyright">Copyright</p>
+        <p id="copyRight">Copyright</p>
     </footer>
 </body>
 </html>
