--- a/contact.html
+++ b/contact.html
@@ -15,9 +15,9 @@
                     <h1>Matt Rybak</h1>
                 </div>
                 <div class="tabs">
-                    <input type="button" value="About Me" onclick="window.location.href='index.html'"/>
-                    <input type="button" value="Portfolio" onclick="window.location.href='portfolio.html'"/>
-                    <input type="button" value="Contact Me" onclick="window.location.href='contact.html'"/>
+                    <input class="tablinks" type="button" value="About Me" onclick="window.location.href='index.html'"/>
+                    <input class="tablinks" type="button" value="Portfolio" onclick="window.location.href='portfolio.html'"/>
+                    <input class="tablinks1" type="button" value="Contact Me" onclick="window.location.href='contact.html'"/>
                 </div>
         </Div>
 
