--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Matt Rybak</title>
+    <link rel="stylesheet" href="assets/css/index_styles3.css">
 </head>
 <body>
     <!-- Container for entire website -->
@@ -16,41 +17,42 @@
                 </div>
                 <div class="tabs">
                     <input class="tablinks" type="button" value="About Me" onclick="window.location.href='index.html'"/>
-                    <input class="tablinks" type="button" value="Portfolio" onclick="window.location.href='portfolio.html'"/>
+                    <input class="tablinks" type="button" value="Portfolio" onclick="window.location.href='Portfolio.html'"/>
                     <input class="tablinks1" type="button" value="Contact Me" onclick="window.location.href='contact.html'"/>
                 </div>
         </Div>
 
     </div>
     <!-- Container for Contact Box -->
-    <div class="Form_Container">
-        <div class="Contact">
-            <h2>Contact</h2>
-        </div>
+
+    <div class="Big_Box3">
+        <div class="Form_Container">
+            <div class="Contact">
+                <h2>Contact</h2>
+            </div>
         <!-- line for contact box -->
-        <hr class="Contact_Line">
 
-        <form action="submit_form.php">
-            <label for="Name">Name</label>
-            <input type="text" id="Name" name="Name" placeholder="Your name...">
+            <form action="submit_form.php">
+                <label for="Name">Name</label>
+                <input type="text" id="Name" name="Name" placeholder="Your name...">
 
-            <label for="email">Email</label>
-            <input type="text" id="email" name="Email" placeholder="example@gmail.com...">
+                <label for="email">Email</label>
+                <input type="text" id="email" name="Email" placeholder="example@gmail.com...">
 
-            <label for="subject">Message</label>
-            <textarea id="Message" name="Message" placeholder="Write something.." style="height:200px"></textarea>
+                <label for="subject">Message</label>
+                <textarea id="Message" name="Message" placeholder="Write something.." style="height:200px"></textarea>
 
-            <input type="submit" value="Submit">
+                <input type="submit" value="Submit">
 
 
-        </form>
+            </form>
+        </div>
     </div>
  
-    <!-- Line before Footer -->
- <hr class="bottom_line">
+     
  <!-- Footer -->
      <footer>
-         <p>Copyright</p>
+            <p id="copyRight">Copyright</p>
      </footer>
 
 </body>
