--- a/portfolio.html
+++ b/portfolio.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Matt Rybak</title>
+    <link rel="stylesheet" href="assets/css/index_styles2.css">
 </head>
 <body>
     <!-- Container for entire website -->
@@ -16,70 +17,62 @@
                 </div>
                 <div class="tabs">
                     <input class="tablinks" type="button" value="About Me" onclick="window.location.href='index.html'"/>
-                    <input class="tablinks" type="button" value="Portfolio" onclick="window.location.href='portfolio.html'"/>
+                    <input class="tablinks" type="button" value="Portfolio" onclick="window.location.href='Portfolio.html'"/>
                     <input class="tablinks1" type="button" value="Contact Me" onclick="window.location.href='contact.html'"/>
                 </div>
             </Div>
 
-        <div class="Second_Page">
-            <div class="Portfolio">
-                <h2>Portfolio</h2>
-            </div>
-            <hr class="Portfolio_line">
+       <div class="Big_Box2">
+            <div class="Second_Page">
+                <div class="Portfolio">
+                    <h2>Portfolio</h2>
+                </div>
             <!-- To Format Images -->
-            <div class="pictures">
+                <div class="pictures">
                 <!-- inserting containers for images to do block text -->
-                <div class="first image container">
-                    <img src="assets/images/first_image.jpg" alt="First Image">
-                    <div class="text-block1">
-                        <h4>First Image</h4>
-                    </div>
-                </div>    
-                
-                <div class="second_image_container">
-                    <img src="assets/images/second_image.jpg" alt="Second Image">
-                    <div class="text-block2">
-                        <h4>Second Image</h4>
-                    </div>
-                </div>
+                    <div class="row">
+                        <div class="column">
+                                <div class="first_image">
+                                    <img src="assets/images/first_image.jpg" alt="First Image">
+                                        <div class="text-block1">First Image</div>
+                                </div>
 
-                <div class="third_image_container">
-                    <img src="assets/images/third_image.jpg" alt="Third Image">
-                    <div class="text-block3">
-                        <h4>Third Image</h4>
-                    </div>
-                </div>
+                                <div class="second_image">
+                                    <img src="assets/images/second_image.jpg" alt="Second Image">
+                                        <div class="text-block2">Second Image</div>                             
+                                </div>
+ 
+                                <div class="third_image">
+                                    <img src="assets/images/third_image.jpg" alt="Third Image">
+                                        <div class="text-block3">Third Image </div>  
+                                </div>
+                        </div>
 
-                <div class="fourth_image_container">
-                    <img src="assets/images/fourth_image.jpg" alt="Fourth Image">
-                    <div class="text-block4">
-                        <h4>Fourth Image</h4>
-                    </div>
-                </div>
+                        <div class="column">
 
-                <div class="fifth_image_container">
-                    <img src="assets/images/fifth_image.jpg" alt="Fifth Image">
-                    <div class ="text-block5">
-                        <h4>Fifth Image</h4>
-                    </div>
-                </div>
+                                <div class="fourth_image">
+                                    <img src="assets/images/fourth_image.jpg" alt="Fourth Image">
+                                        <div class="text-block4">Fourth Image </div>
+                                </div>
 
-                <div class="sixth_image_container">
-                    <img src="assets/images/sixth_image.jpg" alt="Sixth Image">
-                    <div class="text-block6">
-                        <h4>Sixth Image</h4>
+                                <div class="fifth_image">
+                                    <img src="assets/images/fifth_image.jpg" alt="Fifth Image">
+                                        <div class ="text-block5">Fifth Image </div>                                                                                   </div>
+                                </div>
+
+
+                                </div>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-
     </div>
 
- <!-- Line before Footer -->
- <hr class="bottom_line">
+ 
  <!-- Footer -->
 <footer>
-    <p>Copyright</p>
+        <p id="copyRight">Copyright</p>
 </footer>
 
 </body>
