--- a/portfolio.html
+++ b/portfolio.html
@@ -17,7 +17,7 @@
                 </div>
                 <div class="tabs">
                     <input class="tablinks" type="button" value="About Me" onclick="window.location.href='index.html'"/>
-                    <input class="tablinks" type="button" value="Portfolio" onclick="window.location.href='Portfolio.html'"/>
+                    <input class="tablinks" type="button" value="Portfolio" onclick="window.location.href='portfolio.html'"/>
                     <input class="tablinks1" type="button" value="Contact Me" onclick="window.location.href='contact.html'"/>
                 </div>
             </Div>
